--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" Assignment portal for Susan Smith in WDD 230: Web Frontend Development at Brigham Young University - Idaho>
+    <meta name="description" content="Assignment portal for Julie Ann Anderson in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <title>CIT230 Portal Page</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+  <div id="content">
     <head>
         <h1>Julie Ann Anderson</h1>
+        <img src="images/andersonju.jpg" alt="Anderson Head Shot">
     </head>
     <main>
-        <h2>CIT 230: Assignment Portal</h2>
+      <h2>CIT 230: Assignment Portal</h2>
       <ul>
           <li>Lesson 02:<a href="#">Assignment Link</a></li>
           <li>Lesson 03:<a href="#">Assignment Link</a></li>
@@ -19,12 +22,13 @@
       </ul>
     </main>
     <footer>
-        <p>&copy | Julie Ann Anderson | BYUI Remote Learning</p>
+        <p>&copy | Julie Ann Anderson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
         <p>Last Updated: <span id="modified"></span></p>
     </footer>
     <script>
         let currentdate = document.lastModified;
         document.getElementById("modified").textContent = currentdate;
     </script>
+  </div>
 </body>
 </html>
