scripts in the right place

--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
         <p>&copy | Julie Ann Anderson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
         <p>Last Updated: <span id="modified"></span></p>
     </footer>
-    <script>
-        let currentdate = document.lastModified;
-        document.getElementById("modified").textContent = currentdate;
-    </script>
+   <script src="js/main.js.js"></script>
   </div>
 </body>
 </html>
