--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>&copy | Julie Ann Anderson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
         <p>Last Updated: <span id="modified"></span></p>
     </footer>
-   <script src="js/main.js.js"></script>
+   <script src="js/main.js"></script>
   </div>
 </body>
 </html>
