--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       </ul>
     </main>
     <footer>
-        <p>&copy | Julie Ann Anderson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
+        <p>&copy; | Julie Ann Anderson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
         <p>Last Updated: <span id="modified"></span></p>
     </footer>
-   <script src="js/main.js"></script>
   </div>
+  <script src="js/main.js"></script>
 </body>
 </html>
