--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <div id="content">
     <head>
-        <h1>Julie Ann Anderson</h1>
-        <img src="images/andersonju.jpg" alt="Anderson Head Shot">
+      <img src="images/andersonju.jpg" alt="Anderson Head Shot">
+      <h1>Julie Ann Anderson</h1>
     </head>
     <main>
       <h2>CIT 230: Assignment Portal</h2>
@@ -23,7 +23,7 @@
       </ul>
     </main>
     <footer>
-        <p>&copy; | Julie Ann Anderson | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
+        <p>&copy; | Julie Ann Anderson | Idaho | <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a></p>
         <p>Last Updated: <span id="modified"></span></p>
     </footer>
   </div>
