took off middle name

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div id="content">
     <head>
       <img src="images/andersonju.jpg" alt="Anderson Head Shot">
-      <h1>Julie Ann Anderson</h1>
+      <h1>Julie Anderson</h1>
     </head>
     <main>
       <h2>CIT 230: Assignment Portal</h2>
