--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <div id="content">
-    <head>
+    <header>
       <img src="images/andersonju.jpg" alt="Anderson Head Shot">
       <h1>Julie Anderson</h1>
-    </head>
+    </header>
     <main>
       <h2>CIT 230: Assignment Portal</h2>
       <hr>
