--- a/index1.html
+++ b/index1.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Assignment portal for Julie Ann Anderson in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <title>CIT230 Portal Page</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main1.css">
 </head>
 <body>
   <div id="content">
