changed web link for isadora

--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -29,7 +29,7 @@
         <section>
             <h2>Proximity</h2>
             <h3>Isadora Digital Agency.</h3>
-            <p><a href="https://www.isadoradigitalagency.com/" target="_blank">Isadora's Website</a></p>
+            <p><a href="https://isadoradigitalagency.com target="_blank">Isadora's Website</a></p>
             <img src="images/isa.png" alt="Apple's MacBook Air Ad">
             <p>There is a lot going on in this little space, but they did a good job with proximity. The shapes and overlay of the objects are clean and go together without making it too busy.</p>
             <hr>
