--- a/lesson03/index.html
+++ b/lesson03/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -28,7 +28,7 @@
         <img class="logo" src="images/logo.svg" alt="Weather Logo">
         <footer>
             <hr>
-            <p>Idaho Weather App Site Plan &copy 2020 </p>
+            <p>Idaho Weather App Site Plan &copy; 2020 </p>
         </footer>
       </div>
   </body>
