more validation error corrections

--- a/lesson03/typography.html
+++ b/lesson03/typography.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -27,7 +27,7 @@
         <p>Both are imported from Google Fonts.</p>
         <footer>
             <hr>
-            <p>Idaho Weather App Site Plan &copy 2020 </p>
+            <p>Idaho Weather App Site Plan &copy; 2020 </p>
         </footer>
     </div>
   </body>
