--- a/lesson03/target-audience.html
+++ b/lesson03/target-audience.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -40,7 +40,7 @@
         </ol>
         <footer>
           <hr>
-          <p>Idaho Weather App Site Plan &copy 2020 </p>
+          <p>Idaho Weather App Site Plan &copy; 2020 </p>
         </footer>
       </div>
     </body>
