--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <h2>CIT 230: Assignment Portal</h2>
       <hr>
       <ul>
-          <li>Lesson 02: <a href="lesson02/design-principles.html">Assignment Link</a></li>
-          <li>Lesson 03: <a href="#">Assignment Link</a></li>
-          <li>Lesson 04: <a href="#">Link</a> | <a href="#">Link</a></li>
+          <li>Lesson 02: <a href="lesson02/design-principles.html">Design Principles</a></li>
+          <li>Lesson 03: <a href="lesson03/index.html">Site Plan</a></li>
+          <li>Lesson 04: <a href="lesson04/preston-4.html">Preston Home Page</a> | <a href="#">Link</a></li>
       </ul>
     </main>
     <footer>
@@ -29,5 +29,5 @@
     </footer>
   </div>
   <script src="js/main.js"></script>
-  </body>
+</body>
 </html>
