--- a/lesson05/preston-5.html
+++ b/lesson05/preston-5.html
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div class="fiveday">
-            <section class= s"oneday">
+            <section class="oneday">
                 <p class="weekday">
                     Wed
                 </p>
@@ -99,7 +99,7 @@
             <p>Ipsam est eius ab nam nihil accusamus aspernatur voluptas repellendus ducimus molestias perferendis officiis quas similique eveniet eaque tempore minima, tempora sint ad, temporibus, neque asperiores velit accusantium nemo? Repellat!</p>
         </div>
         <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47365.726282633455!2d-111.91534449365263!3d42.09980531190725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8754f78c7cda6c31%3A0xf1b3b4fc465a4a3f!2sPreston%2C%20ID%2083263!5e0!3m2!1sen!2sus!4v1590081541062!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47365.726282633455!2d-111.91534449365263!3d42.09980531190725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8754f78c7cda6c31%3A0xf1b3b4fc465a4a3f!2sPreston%2C%20ID%2083263!5e0!3m2!1sen!2sus!4v1590081541062!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             <div class="contact">
                 <p>Idaho Weather App</p>
                 <img src="images/location.png" alt="location marker icon">
