--- a/samaritan/index.html
+++ b/samaritan/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <video autoplay muted id="book-open">
+    <video autoplay muted loop playsinline preload="auto" id="book-open">
         <source src='book.mp4' type="video/mp4">
     </video>
     <div class="title">
