--- a/samaritan/test.html
+++ b/samaritan/test.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="stylestest.css">
 </head>
 <body>
-    <video autoplay muted playsinline preload="auto" id="book-open">
-        <source src='book.mp4' type="video/mp4">
-    </video>
+    
     <div class="title">
         <h1 id="book-title">The Good Samaritan</h1>
         <div class="arrow bounce">
@@ -47,6 +45,6 @@
     </div>
 
   
-    <script src="scripts/main.js"></script>
+    <!-- <script src="scripts/main.js"></script> -->
 </body>
 </html>
