--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h1>My Outdoor Home</h1>
                 <h4>Relax in Comfort No Matter Where You Are</h4>
                 <div id='button'>
-                    <button>Let's Get Started</button>
+                    <button>Get Started</button>
                 </div>
             </div>
         </section>
