--- a/wint22/lesson3/index.html
+++ b/wint22/lesson3/index.html
@@ -80,6 +80,8 @@
           <h2>Paragraph Font:</h2>
           <h3 class="jura">"Jura"</h3>
           <p>Both are imported from Google Fonts.</p>
+          <h2>Site Map</h2>
+          <img class="sitemap" src="images/sitemap.jpg" alt="visual site map of project">
           <a href='#top'>Back to Top</a>
         </section>
         <footer>
