added new title

--- a/wint22/lesson3/index.html
+++ b/wint22/lesson3/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Weather Site Plan - Home Page</title>
+    <title>Chamber Site Plan - Home Page</title>
     <meta name="description" content="description here">
     <link href="css/styles.css" rel="stylesheet">
   </head>
