--- a/wint22/lesson3/index.html
+++ b/wint22/lesson3/index.html
@@ -61,15 +61,15 @@
           <h2 id="color-scheme">Color Scheme:</h2>
           <h2 class="pri">Primary Color (#26A6D1)</h2>
           <h3>Body/Background of Page</h3>
-          <h3>Some backgrounds of weather items</h3>
+          <h3>Some backgrounds of chamber items</h3>
           <h2 class="sec">Secondary Color (#B5A18D)</h2>
-          <h3>Some background of weather items</h3>
+          <h3>Some background of chamber items</h3>
           <h2 class="acc1">Accent Color 1 (#FFEC5F)</h2>
           <h3>Elements that will draw attention</h3>
           <h2 class="acc2">Accent Color 2 (#A3E8FF)</h2>
-          <h3>Some background of weather items</h3>
+          <h3>Some background of chamber items</h3>
           <h2 class="acc3">Accent Color 3 (#A3E8FF)</h2>
-          <h3>Some background of weather items</h3>
+          <h3>Some background of chamber items</h3>
           <a href='#top'>Back to Top</a>
         </section>
 
