--- a/wint22/chamber/week5/index.html
+++ b/wint22/chamber/week5/index.html
@@ -14,7 +14,8 @@
     <div id='top'>
         <img id="logo" src="images/logo.png" alt="weather logo">
         <header>
-            <h1>Ammon Chamber of Commerce</h1>
+            <h1>Ammon</h1>
+            <p>Chamber of Commerce</p>
         </header> 
         <nav class="navigation">
             <ul>
