added footer and social icons

--- a/wint22/chamber/week5/index.html
+++ b/wint22/chamber/week5/index.html
@@ -29,8 +29,8 @@
             </ul>
         </nav>
         <div id='social'>
-            <img src="images/logo.png" width='50' alt="social media holder">
-            <img src="images/logo.png" width='50' alt="social media holder">
+            <img src="images/facebook.png" width='50' alt="social media holder">
+            <img src="images/twitter.png" width='50' alt="social media holder">
         </div>
     </div>
     <div id='msg-box'>
@@ -102,7 +102,7 @@
         
     </main>
     <footer>
-        <div id='top'>
+        <div id='top-footer'>
             <img id="logo" src="images/logo-w.png" alt="weather logo">
             <div>
                 <h3>Ammon Chamber of Commerce</h3><p>124 Street, Ammon, Id</p>
