--- a/wint22/chamber/week7/storage.html
+++ b/wint22/chamber/week7/storage.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>localStorage Practice</title>
 </head>
 <body>
     <h1>Body Color Change</h1>
     <form>
-        <div>
-          <label for="bgcolor">Choose background color:</label>
-          <input class="color" id="bgcolor" value="0000FF">
-        </div>   
-    </form>
+        <label for="bgcolor">Choose background color:</label>
+        <input type="text" class="color" id="bgcolor">
+    </form>    
+
+    
     <script src="storage.js"></script>
 </body>
 </html>
