--- a/wint22/chamber/week10/weather-api1.html
+++ b/wint22/chamber/week10/weather-api1.html
@@ -10,6 +10,6 @@
     <h1>OpenWeatherMap.org API Test</h1>
     <p>The current temperature in Fairbanks, Alaska is <span id="current-temp"></span> &deg;F</p>
     <p>The current conditions icon path is "<span id="icon-src"></span>"</p><figure><img src="" alt="" id="weathericon" />  <figcaption></figcaption></figure>
-    <script src="weather-api1.js"></script>
+    <script src="js/weather-api1.js"></script>
 </body>
 </html>
