--- a/wint22/chamber/week7/discover.html
+++ b/wint22/chamber/week7/discover.html
@@ -11,39 +11,39 @@
     <h1>Discover what to do in Ammon Idaho</h1>
     <main>
         <figure>
-            <img src="http://dummyimage.com/780x520/ccc/fff" data-src="images/gallery1.jpg" alt="weather image">
+            <img class='gallery' src="http://dummyimage.com/780x520/ccc/fff" data-src="images/gallery1.jpg" alt="weather image">
             <figcaption>Visit our Beautiful Water Ways</figcaption>
         </figure>
         <figure>
-            <img src="http://dummyimage.com/780x520/ccc/fff" data-src="images/gallery2.jpg" alt="weather image">
+            <img class='gallery' src="http://dummyimage.com/780x520/ccc/fff" data-src="images/gallery2.jpg" alt="weather image">
             <figcaption>Enjoy the Lake Life</figcaption>
         </figure>
         <figure>
-            <img src="http://dummyimage.com/780x520/ccc/fff" data-src="images/gallery3.jpg" alt="weather image">
+            <img class='gallery' src="http://dummyimage.com/780x520/ccc/fff" data-src="images/gallery3.jpg" alt="weather image">
             <figcaption>Beautiful in any Season</figcaption>
         </figure>
         <figure>
-            <img src="http://dummyimage.com/780x520/ccc/fff" data-src="images/gallery4.jpg" alt="weather image">
+            <img class='gallery' src="http://dummyimage.com/780x520/ccc/fff" data-src="images/gallery4.jpg" alt="weather image">
             <figcaption>Farming Community</figcaption>
         </figure>
         <figure>
-            <img src="http://dummyimage.com/780x520/ccc/fff" data-src="images/gallery5.jpg" alt="weather image">
+            <img class='gallery' src="http://dummyimage.com/780x520/ccc/fff" data-src="images/gallery5.jpg" alt="weather image">
             <figcaption>Recreational Activities</figcaption>
         </figure>
         <figure>
-            <img src="http://dummyimage.com/780x520/ccc/fff" data-src="images/gallery6.jpg" alt="weather image">
+            <img class='gallery' src="http://dummyimage.com/780x520/ccc/fff" data-src="images/gallery6.jpg" alt="weather image">
             <figcaption>Natures Beauty</figcaption>
         </figure>
         <figure>
-            <img src="http://dummyimage.com/780x520/ccc/fff" data-src="images/gallery7.jpg" alt="weather image">
+            <img class='gallery' src="http://dummyimage.com/780x520/ccc/fff" data-src="images/gallery7.jpg" alt="weather image">
             <figcaption>Ammon's Finest</figcaption>
         </figure>
         <figure>
-            <img src="http://dummyimage.com/780x520/ccc/fff" data-src="images/gallery8.jpg" alt="weather image">
+            <img class='gallery' src="http://dummyimage.com/780x520/ccc/fff" data-src="images/gallery8.jpg" alt="weather image">
             <figcaption>Amazing Landscapes</figcaption>
         </figure>
         <figure>
-            <img src="http://dummyimage.com/780x520/ccc/fff" data-src="images/gallery9.jpg" alt="weather image">
+            <img class='gallery' src="http://dummyimage.com/780x520/ccc/fff" data-src="images/gallery9.jpg" alt="weather image">
             <figcaption>The Great Outdoors</figcaption>
         </figure>
     </main>
