--- a/wint22/chamber/week9/directory.html
+++ b/wint22/chamber/week9/directory.html
@@ -13,7 +13,12 @@
         <h1>Ammon Chamber Businesses</h1>
         </header>
         <main>
+        <div id="views_box">
+            <img class="views" id="cards" src="images/cards.png" alt="cards view">
+            <img class="views" id="list" src="images/list.png" alt="list view">
+        </div>
         <div class="cards"></div>
+        <table class="table"></table>
         </main>
         <footer> 
         Julie Anderson | 🏛 BYU-Idaho | WDD 230
