--- a/wint22/index.html
+++ b/wint22/index.html
@@ -35,7 +35,7 @@
         </main>
         <footer>
             <h3>&copy; &nbsp; |&nbsp;  Mary B. Jane  &nbsp;| &nbsp; Idaho</h3>
-            <p>Last Updated: <span></span></p>
+            <h3>Last Updated: <span></span></h3>
         </footer>
     
     </div>
