--- a/wint22/index.html
+++ b/wint22/index.html
@@ -34,8 +34,8 @@
             </nav>
         </main>
         <footer>
-            <h3>&copy; &nbsp; |&nbsp;  Mary B. Jane  &nbsp;| &nbsp; Idaho</h3>
-            <h3>Last Updated: <span></span></h3>
+            <h3><span id="yr"></span>&copy; &nbsp; |&nbsp;  Mary B. Jane  &nbsp;| &nbsp; Idaho</h3>
+            <h3>Last Updated: <span id="last"></span></h3>
         </footer>
     
     </div>
