--- a/lesson03/index.html
+++ b/lesson03/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Weather Site Plan - Home Page</title>
+    <title>Chamber - Home Page</title>
     <meta name="description" content="description here">
     <link href="css/styles.css" rel="stylesheet">
   </head>
@@ -19,13 +19,13 @@
                 </ul>
             </nav>
         </header>
-        <h1>Idaho Weather App</h1>
+        <h1>Chamber of Commerce</h1>
         <h2>Site Purpose:</h2>
         <p>This site will provide weather information to its users. Users will come to the site to get the latest on weather for their local Idaho city. It will focus on only a few Idaho cities making it very personable and reliable for the user.</p>
         <h2>Available Domain:</h2>
         <h3>idweather.com</h3>
         <h2>Logo:</h2>
-        <img class="logo" src="images/logo.svg" alt="Weather Logo">
+        <img class="logo" src="../img/logo.png" alt="Weather Logo">
         <footer>
             <hr>
             <p>Idaho Weather App Site Plan &copy; 2020 </p>
