--- a/wint22/chamber/week8/join.html
+++ b/wint22/chamber/week8/join.html
@@ -194,7 +194,7 @@ const dateTime = {
 
  
 
-document.querySelector('#business').value = dateTime
+document.querySelector('#date').value = dateTime
   </script>
 </body>
 </html>
