--- a/wint22/chamber/week9/prophets.html
+++ b/wint22/chamber/week9/prophets.html
@@ -19,6 +19,6 @@
         Julie Anderson | 🏛 BYU-Idaho | WDD 230
         </footer>
     </div>
-    <script src="prophets.js"></script>
+    <script src="prophet_cards.js"></script>
 </body>
 </html>
