--- a/wint22/chamber/week8/join.html
+++ b/wint22/chamber/week8/join.html
@@ -78,7 +78,7 @@
 
         <label for="title">Business Position Title *:</label>
         <span>Only letters, dashes and spaces, 7 or more letters</span>
-        <input id="title" name="biztitle" minlength="7" pattern="[- A-Za-z]+" required>
+        <input id="title" name="biztitle" pattern="[- A-Za-z]+" minlength="7" required>
 
         <label for="email">Email *:</label>
         <input id="email" name="email" type="email" placeholder="name@domain.com" required>
