--- a/wint22/index.html
+++ b/wint22/index.html
@@ -19,8 +19,8 @@
             <hr>
             <nav class="flex-container">
                 <ul>
-                    <li>Lesson 01: <a href="#">Design Principles</a></li>
-                    <li>Lesson 02: <a href="#">Title</a></li>
+                    <li>Lesson 01: <a href="#">Date Codepen</a></li>
+                    <li>Lesson 02: <a href="#">Design Principles</a></li>
                     <li>Lesson 03: <a href="#">Title</a></li>
                     <li>Lesson 04: <a href="#">Title</a></li>
                     <li>Lesson 05: <a href="#">Title</a></li>
